2011-06-29  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-58
	* Bug fix in replace Sequence/Path: if parent already contains the new
	  Sequence/Path and thus after replace it is occuring twice, then the
	  the earlier occurance is kept while the later occurance is removed.

2011-06-27 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-57
	* Change "Update all existing ESModules" to "Import all ESModules".
	* Add "Update all existing Modules".
	* Remove some unreachable code in ConfigurationTreeActions.java
	
2011-06-23 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-56
	* Bug fix: Fixes selection path errors. (bug 76145).
	* Fixes Import errors: Forces update the tree model to avoid 
	  ArrayIndexOutOfBoundsException.
	* Added a new progress bar dialog which is also customisable and
	  reusable for long processes.
	* Improvements to ImportAll functionality. (avoiding model updates). 
	  
2011-06-10 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-55
	* Present only imported items differences after importing them. (bug/feature 83085).		
	* Change to "update all existing modules" instead of "import all modules". (bug/feature 83086).
	
2011-06-08  Andrea Bocci <andrea.bocci@crn.ch>
	* tag V01-05-54
	* MessageLogger editor: add support for discarding LogError-level messages on a per-module basis

2011-06-03  Andrea Bocci <andrea.bocci@crn.ch>
	* tag V01-05-53
	* Bug fix: Configuration -> Parse properly takes into account "not" and "ingnore" operators

2011-06-03  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-52
	* Bug fix: propagate module re-labelling to event content statements

2011-06-01 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* Not tagged as version.
	* Disable "datasets" tab for sequences.

2011-06-01 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-51
	* Disable "mouse over" text for Sequences and 